Added a chess variant.

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,8 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Edited files
+*~
 
 # Package Files #
 *.jar
